--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@ padding: 100%;
 border-radius: 17px;
 -webkit-box-shadow: 0 0 15px #000000;
 -moz-box-shadow: 0 0 15px #000000;
+-o-box-shadow: 0 0 15px #000000;
+-ms-box-shadow: 0 0 15px #000000;
 box-shadow: 0 0 15px #000000;
 background-color: #DDDDDD;
 padding: 10px;
@@ -38,6 +40,10 @@ input {
 position: absolute;
 height: 60px;
 width: 195px;
+-webkit-border-radius:7px;
+-moz-border-radius:7px;
+-o-border-radius:7px;
+-ms-border-radius:7px;
 border-radius: 7px;
 font-size: 1.3em;
 color: #ddd;
@@ -61,5 +67,9 @@ font-size: 1.5em;
 text-align: center;
 background-color: #778899;
 color: #ddd;
+-webkit-border:1px inset #3b3b3e;
+-moz-border:1px inset #3b3b3e;
+-o-border:1px inset #3b3b3e;
+-ms-border:1px inset #3b3b3e;
 border: 1px inset #3b3b3e;
 }
