--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ margin: 200px auto;
 padding: 100%;
 -webkit-border-radius: 17px;
 -moz-border-radius: 17px;
+-o-border-radius: 17px;
+-ms-border-radius: 17px;
 border-radius: 17px;
 -webkit-box-shadow: 0 0 15px #000000;
 -moz-box-shadow: 0 0 15px #000000;
@@ -35,11 +37,17 @@ height: 50px;
 background-color: #778899;
 margin: 1%;
 top: 90px;
+-webkit-border-radius:7px;
+-moz-border-radius:7px;
+-o-border-radius:7px;
+-ms-border-radius:7px;
+border-radius: 7px;
+color: #ddd;
 }
 input {
 position: absolute;
 height: 60px;
-width: 195px;
+width: 200px;
 -webkit-border-radius:7px;
 -moz-border-radius:7px;
 -o-border-radius:7px;
@@ -67,9 +75,10 @@ font-size: 1.5em;
 text-align: center;
 background-color: #778899;
 color: #ddd;
--webkit-border:1px inset #3b3b3e;
--moz-border:1px inset #3b3b3e;
--o-border:1px inset #3b3b3e;
--ms-border:1px inset #3b3b3e;
-border: 1px inset #3b3b3e;
+-webkit-border:1px solid #3b3b3e;
+-moz-border:1px solid #3b3b3e;
+-o-border:1px solid #3b3b3e;
+-ms-border:1px solid #3b3b3e;
+border: 1px solid #3b3b3e;
 }
+
